@@ -103,14 +103,12 @@ distribution.</seealso>
     one) is omitted. It cannot be combined with the <code>-c</code> option.</dd>
 
     <dt><code>-m</code></dt>
-    <dd>Use MD5 encryption for passwords. On Windows and Netware, this is
-    the default.</dd>
+    <dd>Use MD5 encryption for passwords. This is the default.</dd>
 
     <dt><code>-d</code></dt>
-    <dd>Use <code>crypt()</code> encryption for passwords. The default on all
-    platforms but Windows and Netware. Though possibly supported by
-    <code>htpasswd</code> on all platforms, it is not supported by the
-    <program>httpd</program> server on Windows and Netware.</dd>
+    <dd>Use <code>crypt()</code> encryption for passwords. This is not
+    supported by the <program>httpd</program> server on Windows and
+    Netware.</dd>
 
     <dt><code>-s</code></dt>
     <dd>Use SHA encryption for passwords. Facilitates migration from/to Netscape
@@ -161,10 +159,9 @@ distribution.</seealso>
     </example>
 
     <p>Adds or modifies the password for user <code>jsmith</code>. The user
-    is prompted for the password. If executed on a Windows system, the password
-    will be encrypted using the  modified Apache MD5 algorithm; otherwise, the
-    system's <code>crypt()</code> routine will be used. If the file does not
-    exist, <code>htpasswd</code> will do nothing except return an error.</p>
+    is prompted for the password. The password will be encrypted using the
+    modified Apache MD5 algorithm. If the file does not exist,
+    <code>htpasswd</code> will do nothing except return an error.</p>
 
     <example>
       htpasswd -c /home/doe/public_html/.htpasswd jane
@@ -176,11 +173,12 @@ distribution.</seealso>
     will display a message and return an error status.</p>
 
     <example>
-      htpasswd -mb /usr/web/.htpasswd-all jones Pwd4Steve
+      htpasswd -db /usr/web/.htpasswd-all jones Pwd4Steve
     </example>
 
     <p>Encrypts the password from the command line (<code>Pwd4Steve</code>)
-    using the MD5 algorithm, and stores it in the specified file.</p>
+    using the <code>crypt()</code> algorithm, and stores it in the specified
+    file.</p>
 </section>
 
 <section id="security"><title>Security Considerations</title>
